# Devflow

./: .gitignore  .npmignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/commands/: adversarial.md  agent.md  bugfix.md  checkpoint.md  collab.md  costs.md  develop.md  devflow.md  gds.md  handoff.md  init.md  memory.md  pair.md  review.md  route.md  story.md  swarm.md
.claude/hooks/: session-startup.sh
.claude/skills/init/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: NPM_INSTALLATION.md
lib/: constants.js  exec-python.js  python-check.js
scripts/: sync-version.js
test/: integration.sh
tests/: __init__.py  conftest.py  test_agent_handoff.py  test_agent_router.py  test_collaboration.py  test_context_monitor.py  test_cost_tracker.py  test_currency_converter.py  test_errors.py  test_pair_programming.py  test_scenarios.py  test_swarm_orchestrator.py  test_validation_loop.py
tooling/: .gitignore
tooling/.automation/: config.ps1.template  config.sh.template
tooling/.automation/agents/: architect.md  ba.md  dev.md  maintainer.md  pm.md  reviewer.md  sm.md  writer.md
tooling/.automation/memory/knowledge/: kg_integration-test.json  kg_test-story.json
tooling/.automation/memory/shared/: shared_integration-test.json  shared_test-story.json
tooling/.automation/overrides/: dev.override.yaml  reviewer.override.yaml  sm.override.yaml  user-profile.yaml
tooling/.automation/overrides/templates/: README.md
tooling/.automation/overrides/templates/architect/: cloud-native.yaml  enterprise-architect.yaml  pragmatic-minimalist.yaml
tooling/completions/: DevflowCompletion.ps1  _run-story  run-story-completion.bash
tooling/docs/: DOC-STANDARD.md
tooling/docs/templates/: bug-report.md  migration-spec.md
tooling/scripts/: context_checkpoint.py  cost_dashboard.py  create-persona.py  create-persona.sh  gds  init-project-workflow.ps1  init-project-workflow.py  init-project-workflow.sh  memory_summarize.py  new-doc.py  new-doc.sh  personalize_agent.py  rollback-migration.sh  run-collab.ps1  run-collab.py  run-collab.sh  run-story.py  run-story.sh  setup-checkpoint-service.ps1  setup-checkpoint-service.py  setup-checkpoint-service.sh  tech-debt-tracker.py  update_version.py  validate-overrides.py  validate-overrides.sh  validate_setup.py
tooling/scripts/completions/: README.md  _gds  _run-story  gds-interactive.zsh
tooling/scripts/lib/: __init__.py  agent_handoff.py  agent_router.py  checkpoint-integration.ps1  checkpoint-integration.sh  claude-cli.sh  cost_config.py  cost_display.py  cost_tracker.py  currency_converter.py  errors.py  override-loader.sh  pair_programming.py  shared_memory.py  swarm_orchestrator.py  validation_loop.py
(+21 files in other folders)
